--- a/index.css
+++ b/index.css
@@ -887,7 +887,7 @@ button:disabled, button[disabled]{
 }
 
 
-.uniqueBtn{
+/* .uniqueBtn{
   
 
     
@@ -900,7 +900,7 @@ button:disabled, button[disabled]{
     border: thin solid #e217bd ;
     /* color: white; */
     background: linear-gradient(to right #0E566B 70%, white 30%);
-    font-size: 14px;
+    font-size: 14px; */
     font-family: "Playwrite GB S", cursive;
     font-weight: 200;
     cursor: pointer;
